--- a/opfs.html
+++ b/opfs.html
@@ -46,6 +46,9 @@
 				gap: 20px;
 				/* justify-content: space-between; */
 			}
+			.details h3 {
+				max-height: 60px;
+			}
 			ul {
 				list-style: none;
 				margin: 0;
@@ -90,10 +93,18 @@
 					<div id="files"></div>
 				</div>
 			</section>
+			<div style="border-left: 1px solid black"></div>
 			<section class="section">
 				<div>
 					<h3>Files Data</h3>
 					<pre id="fileData"></pre>
+				</div>
+			</section>
+			<div style="border-left: 1px solid black"></div>
+			<section class="section">
+				<div>
+					<h3>Files Data Using AccessHandle (read buffer sync)</h3>
+					<pre id="fileDataAccessHandle"></pre>
 				</div>
 			</section>
 		</section>
